Fix PDF paths and improve HTML structure
Updated PDF source paths and fixed HTML structure.

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
     <!-- PDF Embed -->
     <div class="pdf-container">
-        <iframe src="files/Poster.pdf" class="pdf-frame"></iframe>
+        <iframe src="Poster.pdf" class="pdf-frame"></iframe>
     </div>
 
     <!-- Download Link -->
     <p class="download">
-        <a href="files/Poster.pdf" target="_blank">Download Full Poster (PDF)</a>
+        <a href="Poster.pdf" target="_blank">Download Full Poster (PDF)</a>
     </p>
 
     <!-- Developer Section -->
@@ -79,3 +79,4 @@
 
 </body>
 </html>
+
