--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Poster</title>
+
     <style>
         body {
             margin: 0;
@@ -17,34 +18,6 @@
             margin-top: 30px;
         }
 
-        /* PDF display */
-        .pdf-container {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .pdf-frame {
-            width: 80%;
-            height: 900px;
-            border: none;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-            border-radius: 10px;
-        }
-
-        .download a {
-            font-size: 20px;
-            color: #0044cc;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .download a:hover {
-            text-decoration: underline;
-        }
-
-        /* Developer list */
         .dev-list {
             margin-top: 40px;
             font-size: 20px;
@@ -58,14 +31,24 @@
 
     <h2 class="section-title">Project Poster</h2>
 
-    <!-- PDF Embed -->
-    <div class="pdf-container">
-        <iframe src="Poster.pdf" class="pdf-frame"></iframe>
+    <!-- CANVA EMBED -->
+    <div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16);
+        margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy"
+            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0;
+            border: none; padding: 0; margin: 0;"
+            src="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?embed"
+            allowfullscreen="allowfullscreen" allow="fullscreen">
+        </iframe>
     </div>
 
-    <!-- Download Link -->
-    <p class="download">
-        <a href="Poster.pdf" target="_blank">Download Full Poster (PDF)</a>
+    <p>
+        <a href="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?utm_content=DAG10bXNjz0&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+        target="_blank" rel="noopener">
+            Scientific Research Poster
+        </a> by Caleb Pierce
     </p>
 
     <!-- Developer Section -->
@@ -79,4 +62,3 @@
 
 </body>
 </html>
-
