--- a/index.html
+++ b/index.html
@@ -32,24 +32,23 @@
     <h2 class="section-title">Project Poster</h2>
 
     <!-- CANVA EMBED -->
-    <div style="position: relative; width: 100%; height: 0; padding-top: 75.0000%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16);
-        margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-        border-radius: 8px; will-change: transform;">
-        <iframe loading="lazy"
-            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0;
-            border: none; padding: 0; margin: 0;"
-            src="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?embed"
-            allowfullscreen="allowfullscreen" allow="fullscreen">
-        </iframe>
-    </div>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 75%;
+            box-shadow: 0 2px 8px rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em;
+            overflow: hidden; border-radius: 8px;">
+            <iframe loading="lazy"
+                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
+                src="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?embed"
+                allowfullscreen>
+            </iframe>
+        </div>
+        
+        <p>
+            <a href="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?utm_content=DAG10bXNjz0&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+               target="_blank">
+               Scientific Research Poster
+            </a>
+        </p>
 
-    <p>
-        <a href="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?utm_content=DAG10bXNjz0&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
-        target="_blank" rel="noopener">
-            Scientific Research Poster
-        </a> by Caleb Pierce
-    </p>
 
     <!-- Developer Section -->
     <h2 class="section-title">Developers</h2>
@@ -62,3 +61,4 @@
 
 </body>
 </html>
+
