Update developer names in index.html
Updated developer names in the Developer Section.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
     <h2 class="section-title">Developers</h2>
 
     <div class="dev-list">
-        <p>Developer 1 Name</p>
-        <p>Developer 2 Name</p>
-        <p>Developer 3 Name</p>
+        <p>Scott</p>
+        <p>Candan</p>
+        <p>Shejan</p>
+        <p>Caleb</p>
+        <p>Zander</p>
     </div>
 
 </body>
 </html>
+
 
 
