Revamp index.html with new styles and layout
Updated the layout and style of the project poster page, including a new design for the developer section.

--- a/index.html
+++ b/index.html
@@ -1,61 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Poster</title>
 
     <style>
+        /* Global Look */
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f6f6f6;
+            font-family: "Segoe UI", Arial, sans-serif;
+            background: linear-gradient(135deg, #f8f9fb, #e9ecf1);
+            color: #1a1a1a;
+            overflow-x: hidden;
+        }
+
+        h2.section-title {
+            font-size: 38px;
+            margin-top: 50px;
+            margin-bottom: 30px;
+            letter-spacing: 1px;
+            font-weight: 700;
             text-align: center;
         }
 
-        .section-title {
-            font-size: 28px;
-            margin-top: 30px;
+        /* Poster Container */
+        .poster-container {
+            position: relative;
+            width: 90%;
+            max-width: 900px;
+            margin: 40px auto;
+            border-radius: 18px;
+            overflow: hidden;
+            box-shadow: 0 20px 45px rgba(0,0,0,0.15);
+            animation: fadeIn 1.2s ease;
+            background: #fff;
         }
 
-        .dev-list {
+        .poster-container iframe {
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+
+        /* Developer Section */
+        .dev-section {
+            margin-top: 60px;
+            padding: 20px 0 80px 0;
+        }
+
+        .dev-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 40px;
+            width: 85%;
+            margin: 0 auto;
             margin-top: 40px;
-            font-size: 20px;
-            line-height: 1.8;
-            font-weight: bold;
+        }
+
+        .dev-card {
+            background: white;
+            padding: 20px;
+            border-radius: 16px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+            transition: transform 0.25s ease, box-shadow 0.25s ease;
+            animation: fadeInUp 1s ease;
+        }
+
+        .dev-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 18px 30px rgba(0,0,0,0.12);
+        }
+
+        .dev-photo {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 14px;
+            background: #dfe3e9;
+        }
+
+        .dev-name {
+            font-size: 22px;
+            margin-top: 15px;
+            font-weight: 600;
+            text-align: center;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(30px); }
+            to   { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(40px); }
+            to   { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
 
 <body>
 
+    <!-- Title -->
     <h2 class="section-title">Project Poster</h2>
 
-    <!-- CANVA EMBED -->
-        <div style="position: relative; width: 100%; height: 0; padding-top: 75%;
-            box-shadow: 0 2px 8px rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em;
-            overflow: hidden; border-radius: 8px;">
-            <iframe loading="lazy"
-                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
-                src="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?embed"
-                allowfullscreen>
-            </iframe>
+    <!-- Poster -->
+    <div class="poster-container">
+        <iframe loading="lazy"
+            src="https://www.canva.com/design/DAG10bXNjz0/eHFg4kIEZGGg4ogfjYyO6g/view?embed"
+            allowfullscreen>
+        </iframe>
+    </div>
+
+    <!-- Developers -->
+    <div class="dev-section">
+        <h2 class="section-title">Developers</h2>
+
+        <div class="dev-grid">
+
+            <!-- Scott -->
+            <div class="dev-card">
+                <img class="dev-photo" src="Scott.png" alt="Scott">
+                <div class="dev-name">Scott</div>
+            </div>
+
+            <!-- Candan -->
+            <div class="dev-card">
+                <img class="dev-photo" src="Candan.png" alt="Candan">
+                <div class="dev-name">Candan</div>
+            </div>
+
+            <!-- Shejan -->
+            <div class="dev-card">
+                <img class="dev-photo" src="Shejan.png" alt="Shejan">
+                <div class="dev-name">Shejan</div>
+            </div>
+
+            <!-- Caleb -->
+            <div class="dev-card">
+                <img class="dev-photo" src="Caleb.png" alt="Caleb">
+                <div class="dev-name">Caleb</div>
+            </div>
+
+            <!-- Zander -->
+            <div class="dev-card">
+                <img class="dev-photo" src="Zander.png" alt="Zander">
+                <div class="dev-name">Zander</div>
+            </div>
+
         </div>
 
-
-    <!-- Developer Section -->
-    <h2 class="section-title">Developers</h2>
-
-    <div class="dev-list">
-        <p>Scott</p>
-        <p>Candan</p>
-        <p>Shejan</p>
-        <p>Caleb</p>
-        <p>Zander</p>
     </div>
 
 </body>
 </html>
-
-
-
