--- a/index.html
+++ b/index.html
@@ -50,21 +50,26 @@
         }
 
         .dev-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 40px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 32px;
             width: 85%;
             margin: 0 auto;
             margin-top: 40px;
+            justify-content: center;
         }
 
         .dev-card {
             background: white;
-            padding: 20px;
+            padding: 16px;
             border-radius: 16px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.08);
             transition: transform 0.25s ease, box-shadow 0.25s ease;
             animation: fadeInUp 1s ease;
+            width: 220px; /* fixed card width so all match across screens */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .dev-card:hover {
@@ -74,7 +79,7 @@
 
         .dev-photo {
             width: 100%;
-            height: 180px;
+            height: 220px;
             object-fit: cover;
             border-radius: 14px;
             background: #dfe3e9;
