--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
     <!-- Title -->
     <h2 class="section-title">Project Poster</h2>
 
+        <!-- Google Slides Poster Embed -->
+    <div class="poster-container" style="margin-top: 60px;">
+        <iframe 
+            src="https://docs.google.com/presentation/d/1BFo8kaTw8TZDXizl-JwXbQYJpSc2AzUtdNGv3bFrJEg/embed?start=false&loop=false&delayms=3000"
+            frameborder="0"
+            width="100%"
+            height="600"
+            allowfullscreen="true"
+            mozallowfullscreen="true"
+            webkitallowfullscreen="true">
+        </iframe>
+    </div>
+    
     <!-- Poster -->
     <div class="poster-container">
         <iframe loading="lazy"
@@ -159,3 +172,4 @@
 
 </body>
 </html>
+
