--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adversarial Patch Generation</title>
+    <title>Project Poster</title>
 
     <style>
         /* Global Look */
@@ -50,26 +50,21 @@
         }
 
         .dev-grid {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 32px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 40px;
             width: 85%;
             margin: 0 auto;
             margin-top: 40px;
-            justify-content: center;
         }
 
         .dev-card {
             background: white;
-            padding: 16px;
+            padding: 20px;
             border-radius: 16px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.08);
             transition: transform 0.25s ease, box-shadow 0.25s ease;
             animation: fadeInUp 1s ease;
-            width: 220px; /* fixed card width so all match across screens */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
         .dev-card:hover {
@@ -79,7 +74,7 @@
 
         .dev-photo {
             width: 100%;
-            height: 220px;
+            height: 180px;
             object-fit: cover;
             border-radius: 14px;
             background: #dfe3e9;
@@ -101,13 +96,58 @@
             from { opacity: 0; transform: translateY(40px); }
             to   { opacity: 1; transform: translateY(0); }
         }
+        .resources-section {
+            margin-top: 60px;
+            margin-bottom: 40px;
+        }
+
+        .resource-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 28px;
+            width: 85%;
+            margin: 0 auto;
+            margin-top: 25px;
+        }
+
+        .resource-card {
+            background: #ffffff;
+            padding: 25px 20px;
+            border-radius: 14px;
+            text-decoration: none;
+            color: #111;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+            transition: transform 0.25s ease, box-shadow 0.25s ease;
+        }
+
+        .resource-card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 16px 30px rgba(0,0,0,0.13);
+        }
+
+        .resource-card h3 {
+            margin: 12px 0 8px 0;
+            font-size: 20px;
+            font-weight: 600;
+        }
+
+        .resource-card p {
+            font-size: 15px;
+            opacity: 0.8;
+        }
+
+        .resource-icon {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
     </style>
 </head>
 
 <body>
 
     <!-- Title -->
-    <h2 class="section-title">Project Poster</h2>
+    <h2 class="section-title">Adversarial Patch Generation</h2>
 
         <!-- Google Slides Poster Embed -->
     <div class="poster-container" style="margin-top: 60px;">
@@ -121,7 +161,8 @@
             webkitallowfullscreen="true">
         </iframe>
     </div>
-    
+
+
     <!-- Poster -->
     <div class="poster-container">
         <iframe loading="lazy"
@@ -129,6 +170,53 @@
             allowfullscreen>
         </iframe>
     </div>
+
+<!-- Resources Section -->
+<div class="resources-section">
+    <h2 class="section-title">Project Resources</h2>
+
+    <div class="resource-grid">
+
+        <!-- GitHub -->
+        <a href="https://github.com/ccmarti1/ComputerVisionProject2025.git" class="resource-card" target="_blank">
+            <div class="resource-icon">💻</div>
+            <h3>GitHub Repository</h3>
+            <p>Explore the full source code and implementation.</p>
+        </a>
+
+        <!-- PowerPoint -->
+        <a href="https://docs.google.com/presentation/d/1BFo8kaTw8TZDXizl-JwXbQYJpSc2AzUtdNGv3bFrJEg/edit?usp=sharing" 
+           class="resource-card" target="_blank">
+            <div class="resource-icon">📊</div>
+            <h3>Project PowerPoint</h3>
+            <p>View the complete presentation slide deck.</p>
+        </a>
+
+        <!-- Poster -->
+        <a href="https://www.canva.com/design/DAG10bXNjz0/osOJoj87Zxcq9yxh9PXlaA/view" 
+           class="resource-card" target="_blank">
+            <div class="resource-icon">🖼️</div>
+            <h3>Research Poster</h3>
+            <p>View or download the final project poster.</p>
+        </a>
+
+        <!-- Dataset -->
+        <a href="https://www.kaggle.com/datasets/ifigotin/imagenetmini-1000?resource=download" 
+           class="resource-card" target="_blank">
+            <div class="resource-icon">📁</div>
+            <h3>Dataset (ImageNet Mini)</h3>
+            <p>Download the dataset used for training and testing.</p>
+        </a>
+
+    </div>
+</div>
+
+
+        
+
+    </div>
+</div>
+
 
     <!-- Developers -->
     <div class="dev-section">
@@ -172,5 +260,3 @@
 
 </body>
 </html>
-
-
