Modify project title and enhance content sections
Updated project title and added new sections for project slides and demo video.

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 <body>
 
     <!-- Title -->
-    <h2 class="section-title">Project Poster</h2>
-
+    <h2 class="section-title">Adversarial Patch Generation</h2>
+    <h2 class="section-title">Project Slides</h2>
         <!-- Google Slides Poster Embed -->
     <div class="poster-container" style="margin-top: 60px;">
         <iframe 
@@ -188,6 +188,7 @@
     </div>
 
 
+    <h2 class="section-title">Project Poster</h2>
     <!-- Poster -->
     <div class="poster-container">
         <iframe loading="lazy"
@@ -335,4 +336,5 @@
 
 </body>
 </html>
+
 
